--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -1,3 +1,4 @@
-<div class="tile" [ngClass]="{ 'open': !tile.solid, 'solid': tile.solid }">
+<div class="tile" background="images/space.png">
+  <!-- <div class="tile" [ngClass]="{ 'open': !tile.solid, 'solid': tile.solid }"> -->
 
 </div>
