hard coded single tile display

--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -1,4 +1,4 @@
-<div class="tile" background="images/space.png">
+<div class="tile">
   <!-- <div class="tile" [ngClass]="{ 'open': !tile.solid, 'solid': tile.solid }"> -->
-
+  <img src="../../assets/images/tiles/wall.png">
 </div>
