--- a/ui/src/app/tile/tile.component.css
+++ b/ui/src/app/tile/tile.component.css
@@ -1,17 +1,17 @@
 .tile {
   width: 20px;
   height: 20px;
-  position: relative;
+  overflow: hidden;
 }
 
-.tile::before {
-  position: absolute;
-  content: '';
-  z-index: -1;
-  width: 10px;
-  height: 10px;
-  /* background-size: 300% 200%; */
-  background-image: url("../../assets/images/tiles/wall.png");
+.tile img {
+  width: 60px;
+  height: 40px;
+  margin-left: 0px;
+  margin-top: 0px;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
 }
 
 .open {
@@ -34,5 +34,4 @@
   z-index: -1;
   width: 200px;
   height: 50px;
-  /* background-image: url(image.jpg); */
 }
