display correct tile image

--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -1,4 +1,3 @@
 <div class="tile">
-  <!-- <div class="tile" [ngClass]="{ 'open': !tile.solid, 'solid': tile.solid }"> -->
-  <img src="../../assets/images/tiles/wall.png">
+  <img *ngIf="tile" src={{getImageUrl()}}>
 </div>
