--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -1,3 +1,12 @@
 <div class="tile">
-  <img *ngIf="tile" src={{getImageUrl()}}>
+  <img *ngIf="tile" src={{getImageUrl()}} [ngStyle]="{'margin-left': getXOffset() + 'px', 'margin-top': getYOffset() + 'px'}">
+  <div>
+    {{tile.name}},
+    solid: {{tile.solid}},
+    adj: {{tile.adjacency}},
+    rot: {{tile.rotation}}
+    x: {{getXOffset()}},
+    y: {{getYOffset()}},
+    url: {{getImageUrl()}}
+  </div>
 </div>
