--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,2 +1,14 @@
-main page
-<app-game-view></app-game-view>
+<div style="width:100%;">
+  <app-build-toolkit class="section"></app-build-toolkit>
+  <app-game-view class="section"></app-game-view>
+</div>
+<!-- <table>
+  <tr>
+    <td>
+      <app-build-toolkit></app-build-toolkit>
+    </td>
+    <td>
+      <app-game-view></app-game-view>
+    </td>
+  </tr>
+</table> -->
