front end wiring to change tiles

--- a/ui/src/app/build-toolkit/build-toolkit.component.html
+++ b/ui/src/app/build-toolkit/build-toolkit.component.html
@@ -1,1 +1,3 @@
-<p>build-toolkit works!</p>
+<select (change)="changeTile($event)">
+  <option *ngFor="let option of tileOptions">{{option}}</option>
+</select>
