--- a/ui/src/app/game-view/game-view.component.html
+++ b/ui/src/app/game-view/game-view.component.html
@@ -2,7 +2,7 @@
   <table>
     <tr *ngFor="let row of data.tiles">
       <td *ngFor="let tile of row">
-        <app-tile [tile]="tile"></app-tile>
+        <app-tile [tile]="tile" (click)="clickTile(tile)"></app-tile>
       </td>
     </tr>
   </table>
