--- a/ui/src/app/game-view/game-view.component.html
+++ b/ui/src/app/game-view/game-view.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="data">
   <table>
-    <tr *ngFor="let row of data.tiles">
-      <td *ngFor="let tile of row">
+    <tr *ngFor="let row of data">
+      <td *ngFor="let tile of row; trackBy: trackTile">
         <app-tile [tile]="tile" (click)="clickTile(tile)"></app-tile>
       </td>
     </tr>
