add save and load

--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,4 +1,5 @@
-<div style="width:100%;">
+<div class="container">
   <app-build-toolkit class="section" (selectedTileChanged)="selectedTileChanged($event)"></app-build-toolkit>
   <app-game-view class="section" (tileClicked)="tileClicked($event)"></app-game-view>
 </div>
+<app-system-menu></app-system-menu>
