--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -2,7 +2,7 @@
   <div class="tile" [ngStyle]="{'transform': 'rotate(' + tile.rotation +'deg)'}">
     <img *ngIf="tile" src={{getImageUrl()}} [ngStyle]="{'margin-left': getXOffset() + 'px', 'margin-top': getYOffset() + 'px'}">
     <div>
-      {{tile.name}},
+      {{tile.type}},
       solid: {{tile.solid}},
       adj: {{tile.adjacency}},
       rot: {{tile.rotation}}
