--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -13,5 +13,6 @@
     </div>
   </div>
   <div *ngIf="mode === 'air' && tile.air != 0" class="number">{{tile.air}}</div>
+  <div *ngIf="mode === 'power' && tile.power != 0" class="number">{{tile.power}}</div>
   <div *ngIf="mode === 'distance' && tile.distance != 0 && tile.distance != 2147483647" class="number">{{tile.distance}}</div>
 </div>
