--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -8,7 +8,8 @@
       rot: {{tile.rotation}}
       x: {{getXOffset()}},
       y: {{getYOffset()}},
-      air: {{tile.air}}
+      air: {{tile.air}},
+      power: {{tile.power}},
       url: {{getImageUrl()}}
     </div>
   </div>
