--- a/ui/src/app/system-menu/system-menu.component.html
+++ b/ui/src/app/system-menu/system-menu.component.html
@@ -1,2 +1,4 @@
-<button (click)="save()">Save</button>
-<button (click)="load()">Load</button>
+<div class="system-menu">
+  <button (click)="save()">Save</button>
+  <button (click)="load()">Load</button>
+</div>
