wip build panel only on overview

--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="section">
     <app-mode-select class="row" (modeChanged)="modeChanged($event)"></app-mode-select>
-    <app-build-toolkit class="row" (tilePaletteChanged)="tilePaletteChanged($event)"></app-build-toolkit>
+    <app-build-toolkit *ngIf="selectedMode === 'OVERVIEW'" class="row" (tilePaletteChanged)="tilePaletteChanged($event)"></app-build-toolkit>
   </div>
   <app-game-view class="section" (tileClicked)="tileClicked($event)" [mode]="selectedMode"></app-game-view>
 </div>
