wip shield panel skeleton

--- a/ui/src/app/game-view/game-view.component.html
+++ b/ui/src/app/game-view/game-view.component.html
@@ -2,7 +2,7 @@
   <table>
     <tr *ngFor="let row of data">
       <td *ngFor="let tile of row; trackBy: trackTile">
-        <app-tile [tile]="tile" [mode]="mode" (click)="clickTile(tile)"></app-tile>
+        <tile [tile]="tile" [mode]="mode" (click)="clickTile(tile)"></tile>
       </td>
     </tr>
   </table>
