--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="section">
-    <app-mode-select class="row" (modeChanged)="modeChanged($event)"></app-mode-select>
-    <app-build-toolkit *ngIf="selectedMode === 'OVERVIEW'" class="row" (tilePaletteChanged)="tilePaletteChanged($event)"></app-build-toolkit>
+    <mode-select class="row" (modeChanged)="modeChanged($event)"></mode-select>
+    <build-toolkit *ngIf="selectedMode === 'OVERVIEW'" class="row" (tilePaletteChanged)="tilePaletteChanged($event)"></build-toolkit>
+    <shield-menu *ngIf="selectedMode === 'SHIELDS'" class="row"></shield-menu>
   </div>
-  <app-game-view class="section" (tileClicked)="tileClicked($event)" [mode]="selectedMode"></app-game-view>
+  <game-view class="section" (tileClicked)="tileClicked($event)" [mode]="selectedMode"></game-view>
 </div>
-<app-system-menu></app-system-menu>
+<system-menu></system-menu>
