wip more shield info

--- a/ui/src/app/shield-panel/shield-panel.component.html
+++ b/ui/src/app/shield-panel/shield-panel.component.html
@@ -1,3 +1,8 @@
 <div>
-  Shield: {{shield.id}}
+  ID: {{shield.id}}<br />
+  Radius: {{shield.radius}}<br />
+  Frequency Slider: {{shield.frequency}}<br />
+  Desired Power Slider: {{shield.currentPowerPull}}<br />
+  Power: {{shield.power}}/{{shield.totalPowerCapacity}}<br />
+
 </div>
