--- a/ui/src/app/tile/tile.component.html
+++ b/ui/src/app/tile/tile.component.html
@@ -8,6 +8,7 @@
       rot: {{tile.rotation}}
       x: {{getXOffset()}},
       y: {{getYOffset()}},
+      id: {{tile.id}}
       air: {{tile.air}},
       power: {{tile.power}},
       url: {{getImageUrl()}}
@@ -15,5 +16,6 @@
   </div>
   <div *ngIf="mode === 'AIR' && tile.air != 0" class="number">{{tile.air}}</div>
   <div *ngIf="mode === 'POWER' && tile.power != 0" class="number">{{tile.power}}</div>
+  <div *ngIf="mode === 'SHIELDS' && tile.id != 0" class="number">{{tile.id}}</div>
   <div *ngIf="mode === 'DISTANCE' && tile.distance != 0 && tile.distance != 2147483647" class="number">{{tile.distance}}</div>
 </div>
