--- a/ui/src/app/shield-panel/shield-panel.component.html
+++ b/ui/src/app/shield-panel/shield-panel.component.html
@@ -1,9 +1,9 @@
 <div class="shield-panel">
   ID: {{shield.id}}<br />
-  Radius: {{shield.radius}}<br />
+  <!-- Radius: {{shieldUpdate.radius}}<br /> -->
   Frequency: <br />
   <input type="range" min="1" max="10" value="{{shield.frequency}}" class="slider"><br />
   Desired Power: <br />
-  <input type="range" min="1" max="10" value="{{shield.currentPowerPull}}" class="slider"><br />
-  Power: {{shield.power}}/{{shield.totalPowerCapacity}}<br />
+  <input type="range" min="1" max="10" value="{{shield.currentDesiredPower}}" class="slider"><br />
+  <!-- Power: {{shieldUpdate.power}}/{{shield.totalPowerCapacity}}<br /> -->
 </div>
