wip planet generation options

--- a/ui/src/app/planet-view/planet-main/planet-main.component.html
+++ b/ui/src/app/planet-view/planet-main/planet-main.component.html
@@ -1,2 +1,8 @@
-<p>planet-main works!</p>
-<img [src]="planetImage">
+<div class="container">
+  <div class="section">
+    <planet-options></planet-options>
+  </div>
+  <div class="section">
+    <img [src]="planetImage" class="planet-pic" width="500">
+  </div>
+</div>
