all options and better defaults

--- a/ui/src/app/planet-view/planet-options/planet-options.component.html
+++ b/ui/src/app/planet-view/planet-options/planet-options.component.html
@@ -1,5 +1,5 @@
 <div>
-  Seed: <input type="number" [(ngModel)]="seed"><br />
+  Seed: <input type="number" [(ngModel)]="seed"> Random:<input type="checkbox" [(ngModel)]="randomSeed"> <br />
   Density: <input type="number" [(ngModel)]="density"><br />
   Scale: <input type="number" [(ngModel)]="scale"><br />
   <br />
