--- a/ui/src/app/ship-view/tile/tile.component.html
+++ b/ui/src/app/ship-view/tile/tile.component.html
@@ -1,6 +1,7 @@
 <div class="tile-container ">
   <div class="tile" [ngStyle]="{'transform': 'rotate(' + tile.rotation +'deg)'}">
     <img *ngIf="tile" src={{getImageUrl()}} [ngStyle]="{'margin-left': getXOffset() + 'px', 'margin-top': getYOffset() + 'px'}">
+    <div *ngIf="tile.shielded" class="shielded"></div>
     <div>
       {{tile.type}},
       solid: {{tile.solid}},
@@ -11,6 +12,7 @@
       id: {{tile.id}}
       air: {{tile.air}},
       power: {{tile.power}},
+      is shielded: {{tile.shielded}},
       url: {{getImageUrl()}}
     </div>
   </div>
