--- a/ui/src/app/ship-view/main-page/main-page.component.html
+++ b/ui/src/app/ship-view/main-page/main-page.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="section">
     <mode-select class="row" (modeChanged)="modeChanged($event)"></mode-select>
-    <build-toolkit *ngIf="selectedMode === 'OVERVIEW'" class="row" (tilePaletteChanged)="tilePaletteChanged($event)"></build-toolkit>
+    <build-toolkit *ngIf="selectedMode === 'OVERVIEW'" class="row" (tilePaletteChanged)="tilePaletteChanged($event)">
+    </build-toolkit>
     <shield-menu *ngIf="selectedMode === 'SHIELDS'" class="row"></shield-menu>
+    <crew-menu *ngIf="selectedMode === 'CREW'" class="row"></crew-menu>
   </div>
   <game-view class="section" (tileClicked)="tileClicked($event)" [mode]="selectedMode"></game-view>
 </div>
