--- a/ui/src/app/planet-view/planet-options/planet-options.component.html
+++ b/ui/src/app/planet-view/planet-options/planet-options.component.html
@@ -13,6 +13,10 @@
   Default Precipitation: <input type="number" [(ngModel)]="precipitation"><br />
   Water Threshold: <input type="number" [(ngModel)]="waterThreshold"><br />
   Biome Types: <input type="text" [(ngModel)]="biomeTypes"><br />
+
+  <br />
+  Sphere: <input type="checkbox" [(ngModel)]="sphere"><br />
+  Shadow: <input type="checkbox" [(ngModel)]="shadow"><br />
   <br />
   <br />
 
