--- a/ui/src/app/ship-view/tile/tile.component.html
+++ b/ui/src/app/ship-view/tile/tile.component.html
@@ -15,7 +15,7 @@
       power: {{tile.power}},
       is shielded: {{tile.shielded}},
       crewman id: {{tile.crewManId}},
-      crewman division: {{tile.division}},
+      crewman division: {{tile.crewManDivision}},
       url: {{getImageUrl()}}
     </div>
   </div>
